--- a/MemeApp/Base.lproj/Main.storyboard
+++ b/MemeApp/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="KXA-XR-UHV">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MemeApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,111 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TM3-2A-w5d">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qmP-ji-uJY">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="1Ts-vx-LyV"/>
+                                </constraints>
+                                <items>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="TWp-BY-anb"/>
+                                    <barButtonItem systemItem="camera" id="YcE-ha-B4p">
+                                        <connections>
+                                            <action selector="pickAnImageFromCamera:" destination="BYZ-38-t0r" id="8pZ-0E-w9l"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="DeG-7v-dda"/>
+                                    <barButtonItem title="Album" id="X8R-XI-KEG">
+                                        <connections>
+                                            <action selector="pickAnImageFromAlbum:" destination="BYZ-38-t0r" id="xhf-un-ndw"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="3g1-ss-JZt"/>
+                                </items>
+                            </toolbar>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="TOP" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gHo-Vx-vjk">
+                                <rect key="frame" x="16" y="94" width="343" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="PEL-bK-bNb"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="BOTTOM" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JeF-at-pyR">
+                                <rect key="frame" x="16" y="523" width="343" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="a5A-bQ-alF"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
+                        <color key="backgroundColor" red="0.12637259070000001" green="0.12639245390000001" blue="0.1263653636" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="qmP-ji-uJY" secondAttribute="bottom" id="61d-iL-Dvr"/>
+                            <constraint firstItem="JeF-at-pyR" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="Dbg-DI-f1u"/>
+                            <constraint firstItem="TM3-2A-w5d" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="EYm-Rt-eTW"/>
+                            <constraint firstItem="qmP-ji-uJY" firstAttribute="top" secondItem="JeF-at-pyR" secondAttribute="bottom" constant="50" id="Keh-7n-qeT"/>
+                            <constraint firstItem="gHo-Vx-vjk" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="30" id="NMs-h2-D0e"/>
+                            <constraint firstItem="qmP-ji-uJY" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="OLh-ik-ZnH"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="TM3-2A-w5d" secondAttribute="bottom" id="RMi-n4-xmy"/>
+                            <constraint firstItem="TM3-2A-w5d" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Upp-Va-RA5"/>
+                            <constraint firstAttribute="trailing" secondItem="TM3-2A-w5d" secondAttribute="trailing" id="Xno-gU-6qq"/>
+                            <constraint firstItem="gHo-Vx-vjk" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="e0F-FY-R2j"/>
+                            <constraint firstItem="JeF-at-pyR" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="ePt-GM-cIS"/>
+                            <constraint firstAttribute="trailing" secondItem="qmP-ji-uJY" secondAttribute="trailing" id="g4n-b8-dCi"/>
+                            <constraint firstItem="gHo-Vx-vjk" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="l6y-3w-eDG"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="7B7-4r-Jit">
+                        <barButtonItem key="leftBarButtonItem" systemItem="action" id="JcB-gx-REP">
+                            <connections>
+                                <action selector="shareAnImage:" destination="BYZ-38-t0r" id="dGY-zV-gx1"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="cancel" id="NZP-Jg-AGa">
+                            <connections>
+                                <action selector="cancelButtonTapped:" destination="BYZ-38-t0r" id="e5n-ox-12X"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="bottomTextField" destination="JeF-at-pyR" id="fIa-3t-Ixt"/>
+                        <outlet property="cameraButton" destination="YcE-ha-B4p" id="Qx8-01-E0s"/>
+                        <outlet property="cancelButton" destination="NZP-Jg-AGa" id="8dP-zr-WmF"/>
+                        <outlet property="memeImageView" destination="TM3-2A-w5d" id="BWP-1d-gbJ"/>
+                        <outlet property="shareButton" destination="JcB-gx-REP" id="hwP-ON-bl6"/>
+                        <outlet property="toolbar" destination="qmP-ji-uJY" id="5BS-1h-GGp"/>
+                        <outlet property="topTextField" destination="gHo-Vx-vjk" id="fjh-ud-TYo"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1015.2" y="791.15442278860576"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Dg9-dq-4pc">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="KXA-XR-UHV" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Xgm-79-b1Z">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="X4G-8k-aVG"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kcz-5O-Uwg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="133.59999999999999" y="791.15442278860576"/>
         </scene>
     </scenes>
 </document>
