--- a/MemeApp/Base.lproj/Main.storyboard
+++ b/MemeApp/Base.lproj/Main.storyboard
@@ -19,14 +19,14 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TM3-2A-w5d">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="539"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qmP-ji-uJY">
-                                <rect key="frame" x="0.0" y="559" width="375" height="44"/>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qmP-ji-uJY">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="1Ts-vx-LyV"/>
                                 </constraints>
@@ -47,7 +47,7 @@
                                 </items>
                             </toolbar>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="TOP" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gHo-Vx-vjk">
-                                <rect key="frame" x="16" y="30" width="343" height="50"/>
+                                <rect key="frame" x="16" y="94" width="343" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="PEL-bK-bNb"/>
                                 </constraints>
@@ -56,7 +56,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="BOTTOM" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JeF-at-pyR">
-                                <rect key="frame" x="16" y="459" width="343" height="50"/>
+                                <rect key="frame" x="16" y="523" width="343" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="a5A-bQ-alF"/>
                                 </constraints>
@@ -68,6 +68,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="qmP-ji-uJY" secondAttribute="bottom" id="61d-iL-Dvr"/>
+                            <constraint firstItem="TM3-2A-w5d" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8qw-j6-zwE"/>
                             <constraint firstItem="JeF-at-pyR" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="Dbg-DI-f1u"/>
                             <constraint firstItem="TM3-2A-w5d" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="EYm-Rt-eTW"/>
                             <constraint firstItem="qmP-ji-uJY" firstAttribute="top" secondItem="JeF-at-pyR" secondAttribute="bottom" constant="50" id="Keh-7n-qeT"/>
@@ -78,8 +79,9 @@
                             <constraint firstItem="gHo-Vx-vjk" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="e0F-FY-R2j"/>
                             <constraint firstItem="JeF-at-pyR" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="ePt-GM-cIS"/>
                             <constraint firstAttribute="trailing" secondItem="qmP-ji-uJY" secondAttribute="trailing" id="g4n-b8-dCi"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="TM3-2A-w5d" secondAttribute="bottom" id="kWD-a1-SmF"/>
+                            <constraint firstItem="TM3-2A-w5d" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="kpV-VU-2En"/>
                             <constraint firstItem="gHo-Vx-vjk" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="l6y-3w-eDG"/>
-                            <constraint firstItem="qmP-ji-uJY" firstAttribute="top" secondItem="TM3-2A-w5d" secondAttribute="bottom" constant="20" id="pqa-q1-FUN"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Create Meme" id="7B7-4r-Jit">
@@ -95,12 +97,14 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="bottomFieldConstraint" destination="Keh-7n-qeT" id="pL9-gg-Vj4"/>
                         <outlet property="bottomTextField" destination="JeF-at-pyR" id="fIa-3t-Ixt"/>
                         <outlet property="cameraButton" destination="YcE-ha-B4p" id="Qx8-01-E0s"/>
                         <outlet property="cancelButton" destination="NZP-Jg-AGa" id="8dP-zr-WmF"/>
                         <outlet property="memeImageView" destination="TM3-2A-w5d" id="BWP-1d-gbJ"/>
                         <outlet property="shareButton" destination="JcB-gx-REP" id="hwP-ON-bl6"/>
                         <outlet property="toolbar" destination="qmP-ji-uJY" id="5BS-1h-GGp"/>
+                        <outlet property="topFieldConstraint" destination="NMs-h2-D0e" id="CGo-pP-T5U"/>
                         <outlet property="topTextField" destination="gHo-Vx-vjk" id="fjh-ud-TYo"/>
                     </connections>
                 </viewController>
@@ -356,7 +360,7 @@
                     <tabBarItem key="tabBarItem" title="Item" id="VBp-Sa-VfE"/>
                     <toolbarItems/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="Xgm-79-b1Z">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Xgm-79-b1Z">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -410,7 +414,6 @@
         <!--Navigation Controller-->
         <scene sceneID="1Kp-aa-iz6">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6DV-t8-I02" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="N8P-4Z-abM" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="v18-8h-vb0">
@@ -422,6 +425,7 @@
                         <segue destination="42Q-57-wUm" kind="relationship" relationship="rootViewController" id="TKQ-Tp-dYF"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6DV-t8-I02" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1321" y="2291"/>
         </scene>
